--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Open Sans", sans-serif;
 }
 
+h1, h2 {
+    text-align: center;
+}
+
 table {
+    text-align: center;
     border-collapse: collapse;
 }
 
@@ -21,4 +30,35 @@ tbody tr {
 td {
     border: 1px solid #5c5c5c;
     padding: 1em;
+}
+
+@media only screen and (max-width: 600px) {
+    .columnDescription {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    table {
+        width: 100%;
+        table-layout: fixed;
+    }
+    .columnTitle {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 25%;
+    }
+    .columnDescription {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 50%;
+    }
+    .columnYear {
+        width: 10%;
+    }
+    .columnRuntime {
+        width: 15%;
+    }
 }
